--- a/ProjectWe.html
+++ b/ProjectWe.html
@@ -7,6 +7,19 @@
     </head>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* scrollbar styling */
+        ::-webkit-scrollbar {
+            width: 8px;
+            height: 12px;
+            background-color: #e1e1e1;
+            border-radius: 10px;
+        }
+
+        /* thumb styling */
+        ::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: #898989;
+        }
         body *, p, .btn {
             font-family: Helvetica !important;
         }
@@ -103,29 +116,16 @@
                                     </ul>
                                 </div>
                                 <div class="popup-tab-section why">
-                                    <iframe class="iframe" src="iframe.html" frameborder="0" width="100%" height="80%"></iframe>
+                                    <iframe class="iframe" src="Snipppets/levels_why.html" frameborder="0" width="100%" height="80%"></iframe>
                                 </div>
-                                <div class="popup-tab-section journey d-none">
-                                    <h3 style="color: #ff7c0f;">The Journey</h3>
-                                    <p>
-                                        Our process is designed to fit any organization. That's why we can keep it simple, and create a culture unique to you.
-                                    </p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nostrum qui laboriosam earum, odio veniam assumenda dolore temporibus ipsum provident corrupti excepturi quo natus consequatur dignissimos incidunt deserunt aliquid exercitationem?</p>
+                                <div class="popup-tab-section journey d-none" style="overflow-x: hidden !important;">
+                                    <iframe src="Snipppets/levels_journey.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
                                 </div>
                                 <div class="popup-tab-section outcome d-none">
-                                    <h3 style="color: #ff7c0f;">The Outcome</h3>
-                                    <p>
-                                        We help organizations large and small create their own cultures of high performance. 
-                                    </p>
-                                    <p>
-                                        By supporting teams of attuned, aligned, and driven people, we create the synergy that powers success.
-                                    </p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nostrum qui laboriosam earum, odio veniam assumenda dolore temporibus ipsum provident corrupti excepturi quo natus consequatur dignissimos incidunt deserunt aliquid exercitationem?</p>
+                                    <iframe src="Snipppets/levels_outcome.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
                                 </div>
                                 <div class="popup-tab-section successes d-none">
-                                    <h3 style="color: #ff7c0f;">The Successes</h3>
-                                    <img src="activ8.png" style="width: 100%;">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nostrum qui laboriosam earum, odio veniam assumenda dolore temporibus ipsum provident corrupti excepturi quo natus consequatur dignissimos incidunt deserunt aliquid exercitationem?</p>
+                                    <iframe src="Snipppets/levels_success.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
                                 </div>
 
                                 <div class="popup-tab-buttons">
@@ -135,7 +135,6 @@
                                                 <path fill="#000" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.05,0,20,0Zm6.94,28.83L9.37,19.99,26.94,11.16V28.83Z"/>
                                             </g>
                                         </svg>
-                                        <!-- <img src="back.png" class="prev" style="width: 30px; cursor: pointer;"> -->
                                     </div>
                                     <div class="float-end">
                                         <svg class="next" width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
@@ -143,7 +142,6 @@
                                                 <path class="cls-1" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.04,0,20,0Zm-6.95,28.84V11.16l17.58,8.84L13.05,28.84Z"/>
                                             </g>
                                         </svg>
-                                        <!-- <img src="next.png" class="next" style="width: 30px; cursor: pointer;"> -->
                                     </div>
                                 </div>
                             </div>
@@ -220,7 +218,6 @@
             })
             function checkButtons(active) {
                 if($(active).prev().length) {
-                    console.log($())
                     $('#prevG').children().attr('fill', '#0085cb');
                     $(".prev").css('pointer-events', 'all');
                 } else {
