--- a/ProjectWe.html
+++ b/ProjectWe.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="popup-container popup-1 d-none">
                     <div class="popup" style="border: 10px solid #ff7c0f;">
-                        <img class="close-icon" src="assets/SVG/Asset 9.svg" style="width: 30px;">
+                        <img class="close-icon" src="assets/SVG/Asset 9.svg" style="width: 2vw;">
                         <div class="popup-section-1 popup-section" style="background-color: #ff7c0f; color: white;">
                             <div class="popup-section-1-inner" style="height: 90%;">
                                 <img src="assets/SVG/Asset 2.svg" class="mb-3" style="width: 40%;">
@@ -100,7 +100,7 @@
                                 <p>
                                     Taking the time to learn about your unique situation helps us hone in on underlying values, desired outcomes, and the work it will take to reach them.
                                 </p>
-                                <p>
+                                <p class="mb-0">
                                     We know the culture of leadership that will drive your success needs to come from your values, so the solutions we create are unique to you.
                                 </p>
                             </div>
@@ -130,14 +130,14 @@
 
                                 <div class="popup-tab-buttons">
                                     <div class="float-start">
-                                        <svg class="prev" width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                        <svg class="prev" width="2vw" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                                             <g id="prevG">
                                                 <path fill="#000" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.05,0,20,0Zm6.94,28.83L9.37,19.99,26.94,11.16V28.83Z"/>
                                             </g>
                                         </svg>
                                     </div>
                                     <div class="float-end">
-                                        <svg class="next" width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                        <svg class="next" width="2vw" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
                                             <g id="nextG">
                                                 <path class="cls-1" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.04,0,20,0Zm-6.95,28.84V11.16l17.58,8.84L13.05,28.84Z"/>
                                             </g>
