Removed bg image and used img tags

--- a/ProjectWe.html
+++ b/ProjectWe.html
@@ -31,13 +31,12 @@
                     <div class="w-100 d-flex justify-content-center align-items-center height-33">
                         <img class="" src="assets/PNG/Asset 7.png" alt="">
                     </div>
-                    <div class="w-100" style="background-image: url('team.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 34vh;">
-                        <!-- <img class="img-fluid height-34" src="team.jpg" alt=""> -->
+                    <div class="w-100" style="height: 34vh;">
+                        <img class="img-fluid height-34 w-100" src="team.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div class="w-100" style="background-image: url('activ8.png'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 67vh;"></div>
-                    <!-- <img src="activ8.png" class="img-fluid height-67 w-100"> -->
+                    <img src="activ8.png" class="img-fluid height-67 w-100">
                 </div>
                 <div class="col-sm-4 col-md-2 px-0 images-hormel popup-trigger" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
                     <div>
