--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <img class="img-fluid height-34 w-100" src="team.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <img src="activ8.png" class="img-fluid height-67 w-100">
+                <div class="col-md-8 popup-trigger" data-popup="popup-1"">
+                    <img src="activ8.png" class="img-fluid height-67 w-100 popup-1">
                 </div>
                 <div class="col-sm-4 col-md-2 px-0 images-hormel popup-trigger" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
                     <div>
