--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-md-8 popup-trigger" data-popup="popup-1"">
                     <img src="activ8.png" class="img-fluid height-67 w-100 popup-1">
                 </div>
-                <div class="col-sm-4 col-md-2 px-0 images-hormel popup-trigger" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
+                <div class="col-sm-4 col-md-2 px-0 images-hormel" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
                     <div>
                         <h4 class="m-0 py-2 fs-12" style="background-color: #e0665d;">Levels Of Engagement</h4>
                     </div>
@@ -185,7 +185,7 @@
                                     <iframe class="iframe" src="Snipppets/engage_community.html" frameborder="0" width="100%" height="80%"></iframe>
                                 </div>
                                 <div class="popup-tab-section breakthrough d-none">
-                                    <iframe src="Snipppets/engage_breakthrough.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
+                                    <iframe src="https://vod-progressive.akamaized.net/exp=1676405154~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F2407%2F26%2F662037720%2F3236278278.mp4~hmac=494539a4cd121c42ebd8f090336ead6c05c1bb6849a70b9bfd952eac2b0c8df0/vimeo-prod-skyfire-std-us/01/2407/26/662037720/3236278278.mp4?filename=file.mp4" frameborder="0" class="iframe" width="100%" height="50%" style="background-color:white;"></iframe>
                                 </div>
 
                                 <div class="popup-tab-buttons">
