--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-md-8 popup-trigger" data-popup="popup-1"">
-                    <img src="activ8.png" class="img-fluid height-67 w-100 popup-1">
+                    <img src="activ8.png" class="img-fluid height-67 w-100">
                 </div>
                 <div class="col-sm-4 col-md-2 px-0 images-hormel" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
                     <div>
