--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     </div>
                 </div>
                 <div class="popup-container popup-1 d-none">
-                    <div class="popup" style="border-width: 10px;">
+                    <div class="popup" style="border: 10px solid #fff;">
                         <img src="assets/SVG/Asset 9.svg" class="close-icon" style="width: 2vw;">
-                        <div class="popup-1-inner">
-                            <iframe src="https://download-video.akamaized.net/2/playback/e1cf01cd-b182-46b8-9c16-0eec7560e502/a3794ac0-c5cba742?__token__=st=1676389980~exp=1676404380~acl=%2F2%2Fplayback%2Fe1cf01cd-b182-46b8-9c16-0eec7560e502%2Fa3794ac0-c5cba742%2A~hmac=9a9ddebdce9cb04f6e2d7aaa6276dbddb6acdd65224239d2146ddeb1fadd69ab&r=dXMtd2VzdDE%3D frameborder="0" class="img-fluid w-100 h-100"></iframe>
+                        <div class="popup-1-inner d-flex align-items-center justify-content-center h-100">
+                            <iframe width="90%" height="100%" src="https://player.vimeo.com/video/253989945?h=c6db007fe5&color=ef0800&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
