--- a/Snipppets/coach_processes.html
+++ b/Snipppets/coach_processes.html
@@ -2,14 +2,8 @@
     <head>
         <title>iframe</title>
         <!-- Muse CSS -->
-        <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/flatpickr/dist/flatpickr.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/plyr/dist/plyr.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/choices-master/public/assets/styles/choices.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/dropzone/dist/min/dropzone.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/simplebar/dist/simplebar.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/prism/prism.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/css/theme.min.css" rel="stylesheet" type="text/css" media="all">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
@@ -18,28 +12,28 @@
             <h3 style="color: #00bc57;">High Performance</h3>
             <p class="mb-3">We lay a foundation with awareness, choice, accountability, honesty, integrity, and trust.</p>
             <div class="text-center">
-                <img src="../assets/PNG/Asset 20.png" style="width: 75%;">
+                <img src="../assets/coach art/six living principles.png" style="width: 75%;">
             </div>
         </div>
         <div class="process-box">
             <h3 style="color: #00bc57;">Flip the Conversation</h3>
             <p class="mb-3">Gain understanding of how success happens from individuals to entire companies</p>
             <div class="text-center">
-                <img src="../assets/PNG/Asset 21.png" style="width: 75%;">
+                <img src="../assets/coach art/flip the conversation.png" style="width: 75%;">
             </div>
         </div>
         <div class="process-box">
-            <h3 style="color: #00bc57;">Animation Model</h3>
+            <h3 style="color: #00bc57;">Ambition Model</h3>
             <p class="mb-3">Identify areas of resentment and registeration so you can move to a place of peace and ambition.</p>
             <div class="text-center">
-                <img src="../assets/PNG/Asset 22.png" style="width: 75%;">
+                <img src="../assets/coach art/ambition model.png" style="width: 75%;">
             </div>
         </div>
         <div class="process-box">
             <h3 style="color: #00bc57;">The Cycle of Leadership</h3>
             <p class="mb-3">Engage in intentional conversations arouund what's possible, what you're going to do, and what needs to happen to get it done.</p>
             <div class="text-center">
-                <img src="../assets/PNG/Asset 23.png" style="width: 75%;">
+                <img src="../assets/coach art/cycle of leadership.png" style="width: 75%;">
             </div>
         </div>
     </body>
