--- a/Snipppets/learn_accountability.html
+++ b/Snipppets/learn_accountability.html
@@ -7,17 +7,12 @@
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
-        <h3 style="color: #ff7c0f;">The Journey</h3>
+        <h3 style="color: #00c5e9;">Accountability</h3>
         <p class="mb-5">
-            Our process is designed to fit any organization. That's why we can keep it simple, and create a culture unique to you.
+            Accountability and Ownership are the engine driving the learning process.
         </p>
-        <div class="row g-0 justify-content-between">
-            <div class="col-5">
-                <img src="../assets/PNG/Asset 11.png" class="img-fluid">
-            </div>
-            <div class="col-5">
-                <img src="../assets/PNG/Asset 12.png" class="img-fluid">
-            </div>
+        <div class="text-center">
+            <img src="../assets/PNG/Asset 25.png" style="width: 75% !important">
         </div>
     </body>
 </html>
