--- a/Snipppets/learn_experiential.html
+++ b/Snipppets/learn_experiential.html
@@ -2,18 +2,12 @@
     <head>
         <title>iframe</title>
         <!-- Muse CSS -->
-        <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/flatpickr/dist/flatpickr.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/plyr/dist/plyr.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/choices-master/public/assets/styles/choices.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/dropzone/dist/min/dropzone.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/simplebar/dist/simplebar.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/prism/prism.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/css/theme.min.css" rel="stylesheet" type="text/css" media="all">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
-        <h3 style="color: #00c5e9;">Individuals</h3>
+        <h3 style="color: #00c5e9;">Experiential Learning</h3>
         <p>
             Most people believe that learning happens exclusively in the brain. We disagree. In reality, learning involves the ability to take new actions, and that incorporates our whole selves - our intellect, our emotions, and our bodies.
         </p>
