--- a/Snipppets/learn_human.html
+++ b/Snipppets/learn_human.html
@@ -2,23 +2,20 @@
     <head>
         <title>iframe</title>
         <!-- Muse CSS -->
-        <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/flatpickr/dist/flatpickr.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/plyr/dist/plyr.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/choices-master/public/assets/styles/choices.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/dropzone/dist/min/dropzone.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/simplebar/dist/simplebar.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/prism/prism.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/css/theme.min.css" rel="stylesheet" type="text/css" media="all">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
-        <h3 style="color: #00c5e9;">Understand the Domains of Human Experience</h3>
+        <h3 style="color: #00c5e9;">Human Experience</h3>
+        <p>
+            Our approach is based on a holistic model that understands the Human Experience through the lenses of the intellect, body, and emotion.
+        </p>
         <p class="mb-5">
-            Accountability and Ownership are the engine driving the learning process.
+            Each of these domains of your being must be intentionally nurtured, so you can take effective action with emotional maturity, mental alertness, and solid physical presence.
         </p>
         <div class="text-center">
-            <img src="../assets/PNG/Asset 25.png" style="width: 75% !important">
+            <img src="../assets/PNG/Asset 18.png" style="width: 75% !important">
         </div>
     </body>
 </html>
