--- a/Snipppets/learn_stages.html
+++ b/Snipppets/learn_stages.html
@@ -7,13 +7,18 @@
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
-        <h3 style="color: #ff7c0f;">The Outcome</h3>
+        <h3 style="color: #00c5e9;">Stages of Learning</h3>
         <p>
-            We help organizations large and small create their own cultures of high performance. 
+            Learning is a process - nobody can become an expert at a new skill overnight. 
+        </p>
+        <p>
+            The first step towards mastery is awareness of your skill level - in other words, you need to realize and accept the fact that you don't know everything.
         </p>
         <p class="mb-5">
-            By supporting teams of attuned, aligned, and driven people, we create the synergy that powers success.
+            Once you’ve got awareness, making the choice to learn, and keep learning every day, is the best way to reach the level of competency that you desire.
         </p>
-        <img src="../assets/PNG/Asset 15.png" class="img-fluid">
+        <!-- <div class="text-center">
+            <img src="../assets/PNG/Asset 18.png" style="width: 75% !important">
+        </div> -->
     </body>
 </html>
