--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <img class="img-fluid height-34 w-100" src="team.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-8 popup-trigger" data-popup="popup-1"">
+                <div class="col-md-8 popup-trigger" data-popup="popup-video"">
                     <img src="activ8.png" class="img-fluid height-67 w-100">
                 </div>
-                <div class="col-sm-4 col-md-2 px-0 images-hormel" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
+                <div class="col-sm-4 col-md-2 px-0 images-hormel popup-trigger" data-popup="popup-1" style="background-color: #d63429;cursor: pointer;">
                     <div>
                         <h4 class="m-0 py-2 fs-12" style="background-color: #e0665d;">Levels Of Engagement</h4>
                     </div>
@@ -86,11 +86,68 @@
                         <img class="mx-auto" style="width: 55%;" src="assets/SVG/Asset 6.svg">
                     </div>
                 </div>
-                <div class="popup-container popup-1 d-none">
+                <div class="popup-container popup-video d-none">
                     <div class="popup" style="border: 10px solid #fff;">
                         <img src="assets/SVG/Asset 9.svg" class="close-icon" style="width: 2vw;">
                         <div class="popup-1-inner d-flex align-items-center justify-content-center h-100">
                             <iframe width="90%" height="100%" src="https://player.vimeo.com/video/253989945?h=c6db007fe5&color=ef0800&title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="popup-container popup-1 d-none">
+                    <div class="popup" style="border: 10px solid #d63429;">
+                        <img class="close-icon" src="assets/SVG/Asset 9.svg" style="width: 2vw;">
+                        <div class="popup-section-1 popup-section" style="background-color: #d63429; color: white;">
+                            <div class="popup-section-1-inner" style="height: 90%;">
+                                <img src="assets/SVG/Asset 1.svg" class="mb-3" style="width: 40%;">
+                                <h1>Levels oof Engagement</h1>
+                                <p>
+                                    We know that every organization has its own needs, schedules, and opportunities when looking for a place to start on their culture of high performance.
+                                </p>
+                                <p>
+                                    To meet those needs, we offer support at several levels of engagement, giving you the flexibility to find a path toward success that fits you.
+                                </p>
+                                <p class="mb-0">
+                                    Whether you prefer to DIY or want a more hands-on partnership, you’ll be able to find a plan that makes sense.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="popup-section-2 popup-section">
+                            <div class="popup-section-2-inner">
+                                <div class="popup-nav" style="border-bottom: 3px solid #d63429;">
+                                    <ul>
+                                        <li data-parent="1" data-tab="level-1" class="active popup-item">Level 1</li>
+                                        <li data-parent="1" data-tab="level-2" class="popup-item">Level 2</li>
+                                        <li data-parent="1" data-tab="level-3" class="popup-item">Level 3</li>
+                                    </ul>
+                                </div>
+                                <div class="popup-tab-section level-1">
+                                    <iframe class="iframe" src="Snipppets/levels_1.html" frameborder="0" width="100%" height="80%"></iframe>
+                                </div>
+                                <div class="popup-tab-section level-2 d-none">
+                                    <iframe src="Snipppets/levels_2.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
+                                </div>
+                                <div class="popup-tab-section level-3 d-none">
+                                    <iframe src="Snipppets/levels_3.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
+                                </div>
+
+                                <div class="popup-tab-buttons">
+                                    <div class="float-start">
+                                        <svg class="prev" width="2vw" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                            <g class="prevG">
+                                                <path fill="#000" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.05,0,20,0Zm6.94,28.83L9.37,19.99,26.94,11.16V28.83Z"/>
+                                            </g>
+                                        </svg>
+                                    </div>
+                                    <div class="float-end">
+                                        <svg class="next" width="2vw" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                                            <g class="nextG">
+                                                <path class="cls-1" d="M20,0C8.95,0,0,8.95,0,20s8.95,20,20,20,20-8.96,20-20S31.04,0,20,0Zm-6.95,28.84V11.16l17.58,8.84L13.05,28.84Z"/>
+                                            </g>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -163,13 +220,13 @@
                                 <img src="assets/SVG/Asset 3.svg" class="mb-3" style="width: 40%;">
                                 <h1>Engage</h1>
                                 <p>
-                                    Working with Activ8 is a collaborative experience. We determine what your organization needs together.
+                                    Establishing a culture of high performance doesn't happen overnight - it takes the effort and intention of everyone involved.
                                 </p>
                                 <p>
-                                    That means success looks different for everyone, but our philosophy is always the same.
+                                    The good news is that humans are social creatures. We have a natural impulse to find connection with those around us.
                                 </p>
                                 <p class="mb-0">
-                                    We create driven and passionate people, help them form high-performance teams, and empower them to thrive with intentional tools and practices.
+                                    We give people real tools that help them consciously lower their guard and become open to new perspectives, ideas, and ways of doing things.
                                 </p>
                             </div>
                         </div>
@@ -288,11 +345,19 @@
                                 <div class="popup-nav" style="border-bottom: 3px solid #00c5e9;">
                                     <ul>
                                         <li data-parent="5" data-tab="human" class="active popup-item">Human Experience</li>
+                                        <li data-parent="5" data-tab="accountability" class="popup-item">Accountability</li>
+                                        <li data-parent="5" data-tab="stages" class="popup-item">Stages of Learning</li>
                                         <li data-parent="5" data-tab="experiential" class="popup-item">Experiential Learning</li>
                                     </ul>
                                 </div>
                                 <div class="popup-tab-section human">
                                     <iframe class="iframe" src="Snipppets/learn_human.html" frameborder="0" width="100%" height="80%"></iframe>
+                                </div>
+                                <div class="popup-tab-section accountability d-none">
+                                    <iframe class="iframe" src="Snipppets/learn_accountability.html" frameborder="0" width="100%" height="80%"></iframe>
+                                </div>
+                                <div class="popup-tab-section stages d-none">
+                                    <iframe class="iframe" src="Snipppets/learn_stages.html" frameborder="0" width="100%" height="80%"></iframe>
                                 </div>
                                 <div class="popup-tab-section experiential d-none">
                                     <iframe src="Snipppets/learn_experiential.html" frameborder="0" class="iframe" width="100%" height="80%"></iframe>
@@ -383,7 +448,7 @@
 
 
         <script>
-            activeColors = ['#ff7c0f', '#ffb000', '#00bc57', '#00c5e9', '#485daf'];
+            activeColors = ['#d63429', '#ff7c0f', '#ffb000', '#00bc57', '#00c5e9', '#485daf'];
             $(".popup-trigger").click(function() {
                 let popup = '.' + $(this).attr("data-popup");
                 $(popup).removeClass('d-none');
@@ -467,7 +532,7 @@
             
             function changeColor(element) {
                 let parent = element.attr('data-parent');
-                element.attr('style', 'background-color: ' + activeColors[parseInt(parent)-2]);
+                element.attr('style', 'background-color: ' + activeColors[parseInt(parent)-1]);
             }
         </script>
     </body>
