--- a/Snipppets/coach_example.html
+++ b/Snipppets/coach_example.html
@@ -2,19 +2,13 @@
     <head>
         <title>iframe</title>
         <!-- Muse CSS -->
-        <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/flatpickr/dist/flatpickr.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/plyr/dist/plyr.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/choices-master/public/assets/styles/choices.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/dropzone/dist/min/dropzone.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/simplebar/dist/simplebar.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/vendor/prism/prism.css" rel="stylesheet" type="text/css" media="all">
-        <link href="assets/css/theme.min.css" rel="stylesheet" type="text/css" media="all">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
-        <h3 style="color: #00bc57;">The Outcome</h3>
+        <h3 style="color: #00bc57;">Example</h3>
         <div class="d-flex align-items-center justify-content-center" style="height: 85%;">
             <img src="../assets/PNG/Asset 24.png" style="width: 50% !important;">
         </div>
