--- a/Snipppets/coach_example.html
+++ b/Snipppets/coach_example.html
@@ -3,14 +3,15 @@
         <title>iframe</title>
         <!-- Muse CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </head>
     <link rel="stylesheet" href="scrollbar.css">
     <body>
         <h3 style="color: #00bc57;">Example</h3>
         <div class="d-flex align-items-center justify-content-center" style="height: 85%;">
-            <img src="../assets/PNG/Asset 24.png" style="width: 50% !important;">
+            <!-- <img src="../assets/PNG/Asset 24.png" style="width: 50% !important;"> -->
+            <iframe src="https://embed.lottiefiles.com/animation/137268" style="width: 100%; height: 70%;"></iframe>
         </div>
     </body>
 </html>
